[workspace]
members = [
    "crates/*",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.89"
cairo-lang-runner = "2.8.2"
cairo-lang-sierra = "2.8.2"
camino = "1.1.9"
clap = "4.5.19"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
starknet-types-core = "0.1.7"
indoc = "2.0.5"
scarb-ui = "0.1.5"
scarb-metadata = "1.12.0"
thiserror = "1.0.64"
num-bigint = "0.4.6"
proptest = "1.5.0"
log = "0.4.22"
