[package]
name = "scarb_pytest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "scarb_pytest"
crate-type = ["cdylib"]
path = "crates/scarb-pytest/src/lib.rs"

[dependencies]
pyo3 = "0.22.0"
anyhow = "1.0.89"
cairo-lang-runner = {path = "/Users/msaug/deps/cairo/crates/cairo-lang-runner"}
cairo-lang-sierra = {path = "/Users/msaug/deps/cairo/crates/cairo-lang-sierra"}
camino = "1.1.9"
clap = "4.5.19"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
starknet-types-core = "0.1.7"
indoc = "2.0.5"
scarb-ui = "0.1.5"
scarb-metadata = "1.12.0"
thiserror = "1.0.64"
num-bigint = "0.4.6"
proptest = "1.5.0"
log = "0.4.22"
