[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "cairo_test_runner"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "cairo-test-runner",
]
[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv.sources]
cairo-test-runner = { workspace = true }
