[package]
name = "test_runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cairo_test_runner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
cairo-lang-runner = {path = "/Users/msaug/deps/cairo/crates/cairo-lang-runner"}
cairo-lang-sierra = {path = "/Users/msaug/deps/cairo/crates/cairo-lang-sierra"}
camino = "1.1.9"
clap = { version = "4.5.19", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
starknet-types-core = "0.1.7"
indoc = "2.0.5"
scarb-ui = "0.1.5"
scarb-metadata = "1.12.0"
thiserror = "1.0.64"
num-bigint = "0.4.6"
proptest = "1.5.0"
log = "0.4.22"
itertools = "0.13.0"
cairo-vm = "1.0.1"
num-traits = "0.2.19"
cairo-lang-utils = {path = "/Users/msaug/deps/cairo/crates/cairo-lang-utils"}
env_logger = "0.10.0"

[lib]
path = "src/lib.rs"
